fix the z-index of some elements so they dont overlap

--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ main {
 
 main > button, 
 main > div {
+    background-color: white;
     height: 250px;
     width: 200px;
     border: black solid 3px;
@@ -61,6 +62,10 @@ main > div > div {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+main > div > * {
+    z-index: 1;
 }
 
 main > div > div:first-of-type button {
@@ -98,6 +103,7 @@ main > div p {
 }
 
 .background {
+    z-index: 1;
     position: fixed;
     height: 100vh;
     width: 100vw;
@@ -127,6 +133,8 @@ form {
 
     max-width: 600px;
     min-width: 400px;
+
+    z-index: 2;
 }
 
 form div {
@@ -235,8 +243,7 @@ form > div:last-of-type {
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: -1;
-    
+    z-index: 0;
     background-position: -30px 60px;
     background-repeat: no-repeat;
     opacity: 0.1;
